# web_search

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.sh  release.sh  settings_meta.yaml
profiles/: google.yaml  google_image.yaml  google_maps.yaml  wikipedia.yaml  youtube.yaml
settings/: google.yaml  google_image.yaml  google_maps.yaml  wikipedia.yaml  youtube.yaml
src/: config.rs  execute.rs  main.rs  query.rs  response.rs  service.rs  suggestion_proc.rs
