[package]
name = "web_search"
version = "0.1.0"
authors = ["Yaxin Cheng <yaxin.cheng@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.5"
ureq = { version = "1.1", features = ["json"] }
percent-encoding = "2.1.0"

[features]
google = []
wikipedia = []
