[package]
name = "web_search"
version = "0.1.0"
authors = ["Yaxin Cheng <yaxin.cheng@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "1.1", features = ["json"] }
percent-encoding = "2.1.0"
htmlescape = "0.3.1"

[features]
google = []
wikipedia = []
api_key = []
google_maps = []